Clean up build a bit
Signed-off-by: Michael Steinert <mike.steinert@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -2,27 +2,30 @@
 # Lines that start with '#' are comments.
 # For a project mostly in C, the following would be a good set of
 # exclude patterns (uncomment them if you want to use them):
+*.Plo
+*.Po
 *.[oa]
-*~
 *.la
 *.lai
 *.lo
-*.so*
 *.pc
-*.Plo
-*.Po
 *.pyc
+*.so*
 *.swo
 *.swp
+*~
 .libs
+/config.h.in
+Doxyfile
+Makefile
+Makefile.in
 aclocal.m4
 autom4te.cache
-build
 bstring-*.tar.gz
+build
 config.cache
 config.guess
 config.h
-/config.h.in
 config.log
 config.status
 config.sub
@@ -30,18 +33,25 @@ configure
 cscope.files
 cscope.out
 depcomp
-Doxyfile
 install-sh
 libtool
 ltmain.sh
 m4/libtool.m4
 m4/lt*.m4
-Makefile
-Makefile.in
 missing
 stamp-h1
 tags
+test-driver
 tests/bstest
+tests/bstest.log
+tests/bstest.trs
 tests/cpptest
+tests/cpptest.log
+tests/cpptest.trs
 tests/test
+tests/test-suite.log
+tests/test.log
+tests/test.trs
 tests/testaux
+tests/testaux.log
+tests/testaux.trs
