Convert "core" tests to use libcheck
Signed-off-by: Michael Steinert <mike.steinert@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -19,21 +19,22 @@ pkginclude_HEADERS = \
 	bstring/bstraux.h \
 	bstring/bstrlib.h
 
-TESTS = $(check_PROGRAMS)
-check_PROGRAMS =
-
 if HAVE_CHECK
-check_PROGRAMS += tests/testaux
+TESTS = $(check_PROGRAMS)
+check_PROGRAMS = \
+	tests/bstest \
+	tests/testaux
+
+tests_bstest_SOURCES = tests/bstest.c
+tests_bstest_CFLAGS = -I$(top_srcdir)/bstring $(CHECK_CFLAGS)
+tests_bstest_LDFLAGS = $(CHECK_LIBS)
+tests_bstest_LDADD = bstring/libbstring.la
+
 tests_testaux_SOURCES = tests/testaux.c
-tests_testaux_CFLAGS = -I$(top_srcdir)/bstring $(CHECK_FLAGS)
+tests_testaux_CFLAGS = -I$(top_srcdir)/bstring $(CHECK_CFLAGS)
 tests_testaux_LDFLAGS = $(CHECK_LIBS)
 tests_testaux_LDADD = bstring/libbstring.la
 endif
-
-check_PROGRAMS += tests/bstest
-tests_bstest_SOURCES = tests/bstest.c
-tests_bstest_CFLAGS = -I$(top_srcdir)/bstring
-tests_bstest_LDADD = bstring/libbstring.la
 
 # Test targets
 include $(top_srcdir)/m4/valgrind.mk
@@ -42,5 +43,4 @@ include $(top_srcdir)/m4/gdb.mk
 
 # Install pkg-config scripts
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = \
-	bstring.pc
+pkgconfig_DATA = bstring.pc
