--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-# git-ls-files --others --exclude-from=.git/info/exclude
-# Lines that start with '#' are comments.
-# For a project mostly in C, the following would be a good set of
-# exclude patterns (uncomment them if you want to use them):
 *.Plo
 *.Po
 *.[oa]
@@ -17,6 +13,7 @@
 .deps
 .dirstamp
 .libs
+/compile
 /config.h.in
 Doxyfile
 Makefile
