Compatibility with Solaris standard C library
The Solaris standard C library defines a bgets symbol
in libgen.h which conflicts with this library

https://docs.oracle.com/cd/E36784_01/html/E36877/bgets-3gen.html

This changeset introduces a build system check for this symbol
and wraps a workaround in preprocessor macros

You can also force the workaround with -Dforce-bgets-workaround=true

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,4 +1,10 @@
 option(
+    'force-bgets-workaround',
+    type: 'boolean',
+    value: true,
+    description: 'Always use workaround that renames bgets function to bgetstring',
+)
+option(
     'enable-docs',
     type: 'boolean',
     value: false,
