Check for and use no-undefined linker flag, explicitly link with libc
Check if the linker can link with '-Wl,--no-undefined' and apply the flag
when linking libbstring

Also for the sake of OpenBSD, look for and explicitly link with libc
in order to address the linker error that the above flag revealed

--- a/bstring/meson.build
+++ b/bstring/meson.build
@@ -6,6 +6,8 @@ libbstring = library(
     version: '1.0.0',
     soversion: '1',
     include_directories: bstring_inc,
+    dependencies: bstring_deps,
+    link_args: linker_flags,
     install: true,
 )
 
