Turn the bgets workaround into a manual option
Rather than attempting to detect the bgets symbol dynamically, use a boolean build system flag to enable it

The code snippet we used before triggered a false positive on Ubuntu 24.04

Only Solaris 11 is known to need this workaround

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -347,6 +347,7 @@ jobs:
             set -e
             export PATH=/usr/local/sbin:/usr/local/bin:$PATH
             meson setup build \
+              -Denable-bgets-workaround=true \
               -Denable-tests=true \
               -Dpkg_config_path=/usr/lib/amd64/pkgconfig
             meson compile -C build
