--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -360,3 +360,56 @@ jobs:
             meson test -C build
             meson install -C build
             ninja -C build uninstall
+
+  build-windows:
+    name: Windows (MSYS2+gcc)
+    runs-on: windows-latest
+    defaults:
+      run:
+        shell: msys2 {0}
+    steps:
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+      - name: Setup MSYS2
+        uses: msys2/setup-msys2@fb197b72ce45fb24f17bf3f807a388985654d1f2 # v2.29.0
+        with:
+          msystem: MINGW64
+          update: true
+          install: >-
+            mingw-w64-x86_64-gcc
+            mingw-w64-x86_64-meson
+            mingw-w64-x86_64-ninja
+            mingw-w64-x86_64-pkg-config
+            mingw-w64-x86_64-check
+      - name: Configure
+        run: |
+          meson setup build \
+            -Denable-tests=true
+      - name: Build
+        run: meson compile -C build
+      - name: Run unit tests
+        run: meson test -C build
+      - name: Install
+        run: meson install -C build
+      - name: Uninstall
+        run: ninja -C build uninstall
+
+  ci-msvc:
+    name: Windows (MSVC)
+    runs-on: windows-latest
+    steps:
+      - name: Fetch Sources
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+      - name: Setup Python
+        uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c # v6.0.0
+        with:
+          python-version: '3.x'
+      - name: Install Python Dependencies
+        run: pip install meson ninja
+      - name: Prepare MSVC
+        uses: bus1/cabuild/action/msdevshell@06ea2833eef61e9b0d0ce0d728416e617e4fb1fe # v1
+        with:
+          architecture: x64
+      - name: Configure
+        run: meson setup build
+      - name: Build
+        run: meson compile -v -C build
