port UTF8 string manipulation modules from bstrlib
Port the UTF-8 string manipulation modules from bstrlib to this fork. Credits to Paul Hsieh.

utf8util is a standalone low-level module providing a forward iterator over UTF-8 byte sequences (utf8IteratorInit, utf8IteratorGetNextCodePoint, utf8IteratorGetCurrCodePoint, utf8ScanBackwardsForCodePoint) along with the cpUcs4/cpUcs2 type definitions and the isLegalUnicodeCodePoint macro.

buniutil builds on top of it and bstrlib to provide four higher-level functions: buIsUTF8Content, buAppendBlkUcs4, buGetBlkUTF16, and buAppendBlkUTF16. Both modules are compiled into the main libbstring binary, enabled by default and controlled by the new enable-utf8 build option.

Two adaptations were made to fit bstring's conventions: const_bstring was replaced with const bstring throughout (bstring dropped that typedef), and BSTR_PUBLIC visibility attributes were added to all public declarations.

A new test module tests/testutf8.c was written from scratch, covering the full API surface including ASCII and multi-byte iteration, error recovery, surrogate pair encoding/decoding, BOM handling, and null/invalid-argument guards.

--- a/bstring/meson.build
+++ b/bstring/meson.build
@@ -1,8 +1,16 @@
-install_headers(['bstraux.h', 'bstrlib.h'])
+bstring_sources = ['bstraux.c', 'bstrlib.c']
+bstring_headers = ['bstraux.h', 'bstrlib.h']
+
+if get_option('enable-utf8')
+    bstring_sources += ['buniutil.c', 'utf8util.c']
+    bstring_headers += ['buniutil.h', 'utf8util.h']
+endif
+
+install_headers(bstring_headers)
 
 libbstring = library(
     meson.project_name(),
-    ['bstraux.c', 'bstrlib.c'],
+    bstring_sources,
     version: meson.project_version(),
     soversion: '1',
     include_directories: bstring_inc,
